<resources>
    <string name="app_name">Memeolise</string>
    <string name="button_Start">Start</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_prefs_NumberofEvents">Number of \nEvents</string>
    <string name="tv_prefs_ValueofN">Value of \n n</string>
    <string name="et_prefs_hintEventInterval">[s]</string>
    <string name="tv_prefs_Theme">Theme</string>
    <string name="tv_prefs_Voice">Voice</string>
    <string name="tv_prefs_EventInterval">Event \ninterval</string>
    <string name="et_prefs_hintNumberofEvents">[int]</string>
    <string name="et_prefs_ValueN">[int]</string>
    <string name="buttonStart">Start</string>
    <string name="tv_prefs_Audio">Audio</string>
    <string name="tv_prefs_Visual">Visual</string>
    <string name="switch_textOff">Off</string>
    <string name="switch_textOn">On</string>
    <string name="button_prefs_Save">Save</string>
    <string name="audio_on">audio ON</string>
    <string name="audio_off">audio Off</string>
    <string name="visual_off">visual Off</string>
    <string name="visual_on">visual On</string>
    <string name="desc_help">button that is gonna show explanation on the game</string>
    <string name="dialog_help_message">You are presented by a sequence of stimuli.
    The task you have is to determine whether the stimulus matches the stimulus of n steps
    earlier. You do this by pressing the button. \n\nBy altering the preferences you can choose
    to have visual and/or audio stimuli, the value of n and the amount of events that you will be shown.
    \nHave fun!</string>
    <string name="dialog_help_title">Game Explanation</string>
    <string name="descr_iv_gameactivity">under construction</string>
    <string name="buttonVisual_gameactivity">Position</string>
    <string name="buttonAudio_gameactivity">Audio</string>
    <string name="text_before_eventNo">Event number:</string>
    <string name="resultdialog_name">Name</string>
    <string name="descr_cd3">countdown3</string>
    <string name="descr_cd2">countdown 2</string>
    <string name="descr_cd1">countdown 1</string>
    <string name="scoreText">Score:</string>
    <string name="score_text">Score:</string>
    <string name="slash_Text">/</string>
    <string name="name_text">Name:</string>
    <string name="descr_IV_home_eventNr">ImageView for the eventnumber</string>
    <string name="descr_IV_home_nBack">IV for nBack display</string>

</resources>