<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/underconstruction"
        android:contentDescription="@string/descr_iv_gameactivity"/>

    <kth.jjve.memeolise.game.GameView
        android:id="@+id/gameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonVisualMatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVisualMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonVisual_gameactivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAudioMatch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAudioMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAudio_gameactivity"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVisualMatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonVisualMatch"
        app:layout_constraintTop_toTopOf="@+id/buttonVisualMatch" />

    <TextView
        android:id="@+id/textView_game_eventNoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_before_eventNo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_game_eventNo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="@+id/textView_game_eventNoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_game_eventNoText"
        app:layout_constraintTop_toTopOf="@+id/textView_game_eventNoText" />

</androidx.constraintlayout.widget.ConstraintLayout>